--- a/index.html
+++ b/index.html
@@ -3346,7 +3346,7 @@ currTime = 0;
 function calculateOdds(currentNode,ignoreEqual=false) {
 	//console.log(Date.now()-currTime, currentNode);
 	//currTime = Date.now();
-	//if(currentNode == 1121) {console.log('set breakpoint');}
+	if(currentNode == 1342) {console.log('set breakpoint');}
 	if(toCalculate.indexOf(currentNode) > 0) {toCalculate.splice(toCalculate.indexOf(currentNode),1);}
 	var oldInputStates = objectsArray[currentNode].inputStates;
 	if(document.getElementById(currentNode).className.baseVal == 'SVG_Module') {
@@ -3610,7 +3610,7 @@ function calcOddsSwitch(currentNode,useInfData) {
 			{newStates = addToArray(newStates, updateIDs(currState[0], [nodePosition], [objectsArray[currentNode].attachedNode]), currState[1]); break;}
 			case 'SVG_ClickGC': {
 				//console.log(currState);
-				if(currState[0][scryInformation].length > 0) {newStates = clickScry(currState, currentNode, objectsArray[objectsArray[currentNode].attachedAbove].attachedNode);}
+				if(currState[0][scryInformation].length == 1) {newStates = clickScry(currState, currentNode, objectsArray[objectsArray[currentNode].attachedAbove].attachedNode);}
 				else {
 					currentArray = ['Frenzy','Lucky','Click Frenzy','Storm','BlabGC','Building Special','Storm Drop','SweetGC'];
 					if(currentArray.indexOf(currState[0][scryPosition][currState[0][scryPosition].length-1][0]) > -1) {newStates = clickHighBSscry(currState, objectsArray[currentNode].attachedNode);}
@@ -3620,7 +3620,7 @@ function calcOddsSwitch(currentNode,useInfData) {
 				break;
 			}
 			case 'SVG_ClickWC': {
-				if(currState[0][scryInformation].length > 0) {newStates = clickScry(currState, currentNode, objectsArray[objectsArray[currentNode].attachedAbove].attachedNode);}
+				if(currState[0][scryInformation].length == 1) {newStates = clickScry(currState, currentNode, objectsArray[objectsArray[currentNode].attachedAbove].attachedNode);}
 				else {
 					currentArray = ['Clot','Ruin','Cursed Finger','SweetWC','BlabWC']; //,'Elder Frenzy'
 					if(currentArray.indexOf(currState[0][scryPosition][currState[0][scryPosition].length-1][0]) > -1) {newStates = clickHighBSscry(currState, objectsArray[currentNode].attachedNode);}
@@ -5684,25 +5684,25 @@ function clickScry(currState, currentNode, linkedNodes) {
 			reducedScries.pop();
 			if (currScryInfo[0] == 'GCscry' && document.getElementById(currentNode).className.baseVal == 'SVG_ClickGC') {
 				let buffList = ['Frenzy','Lucky','Storm','Click Frenzy','Building Special','SweetGC','Storm Drop','BlabGC'];
-				let probList = [GCmatrixFtHoF[0],GCmatrixFtHoF[1],GCmatrixFtHoF[3],GCmatrixFtHoF[4],GCmatrixFtHoF[5],GCmatrixFtHoF[6],GCmatrixFtHoF[7]-GCmatrixFtHoF[3]/2,GCmatrixFtHoF[3]*2];
+				let probList = [GCmatrixFtHoF[0],GCmatrixFtHoF[1],GCmatrixFtHoF[3],GCmatrixFtHoF[4],GCmatrixFtHoF[5],GCmatrixFtHoF[6],GCmatrixFtHoF[7]-GCmatrixFtHoF[3]/2,GCmatrixFtHoF[3]/2];
 				let lastClickNums = [0,1,3,4,5,6,9,9];
 				let newScryInfo = currScryInfo.slice(1,currScryInfo.length);
 				newScryInfo.splice(0,0,'Frenzy');
 				for (var i = 0; i < 8; i++) {
-					let newScries = Array.from(reducedScries);
+					let newScries = structuredClone(reducedScries);
 					for (var j = 0; j < dupeScries; j++) {
 						newScries.push([buffList[i]]);
 					}
 					newScryInfo[0] = buffList[i];
 					if (i == 0) {
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition,frenzyPosition],[Array.from(newScries),lastClickNums[i],newScryInfo,IDs[WCposition]+WCscries,1]),value*probList[i]);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition,frenzyPosition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),IDs[WCposition]+WCscries,1]),value*probList[i]);
 					}
 					else if (i != 4) {
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition],[Array.from(newScries),lastClickNums[i],newScryInfo,IDs[WCposition]+WCscries]),value*probList[i]);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),IDs[WCposition]+WCscries]),value*probList[i]);
 					}
 					else {
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,BSposition,WCposition],[Array.from(newScries),lastClickNums[i],newScryInfo,IDs[BSposition]+1,IDs[WCposition]+WCscries]),value*probList[i]*(totalBuildings-IDs[BSposition])/totalBuildings);
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition],[Array.from(newScries),lastClickNums[i],newScryInfo,IDs[WCposition]+WCscries]),value*probList[i]*(IDs[BSposition])/totalBuildings);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,BSposition,WCposition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),IDs[BSposition]+1,IDs[WCposition]+WCscries]),value*probList[i]*(totalBuildings-IDs[BSposition])/totalBuildings);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),IDs[WCposition]+WCscries]),value*probList[i]*(IDs[BSposition])/totalBuildings);
 					}
 				}
 			}
@@ -5713,19 +5713,19 @@ function clickScry(currState, currentNode, linkedNodes) {
 				let newScryInfo = currScryInfo.slice(1,currScryInfo.length);
 				newScryInfo.splice(0,0,'Clot');
 				for (var i = 0; i < 6; i++) {
-					let newScries = Array.from(reducedScries);
+					let newScries = structuredClone(reducedScries);
 					for (var j = 0; j < WCscries; j++) {
 						newScries.push([buffList[i]]);
 					}
 					newScryInfo[0] = buffList[i];
 					if (i == 0) {
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,clotPosition,WCposition],[Array.from(newScries),lastClickNums[i],newScryInfo,1,IDs[WCposition]]),value*probList[i]);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,clotPosition,WCposition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),1,IDs[WCposition]]),value*probList[i]);
 					}
 					else if (i == 3) {
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,EFposition,WCposition],[Array.from(newScries),lastClickNums[i],newScryInfo,1,IDs[WCposition]]),value*probList[i]);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,EFposition,WCposition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),1,IDs[WCposition]]),value*probList[i]);
 					}
 					else {
-						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition],[Array.from(newScries),lastClickNums[i],newScryInfo,IDs[WCposition]]),value*probList[i]);
+						probs = addToArray(probs,updateIDs(IDs, [scryPosition,lastClickPosition,scryInformation,WCposition],[structuredClone(newScries),lastClickNums[i],structuredClone(newScryInfo),IDs[WCposition]]),value*probList[i]);
 					}
 				}
 			}
